--- a/src/memoryui/memoryUI.css
+++ b/src/memoryui/memoryUI.css
@@ -16,40 +16,48 @@ table {
   width: 100%;
 }
 
-.field:not(:last-child) {
-  margin-bottom: 0.75rem;
+.table-block  {
+  width: 100%;
 }
 
-@media screen and (min-width: 361px), print {
-  .field.is-horizontal {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+.label {
+  white-space: nowrap; 
+}
+
+#address-jump, #mem-move, #display-settings, #display-rows {
+  box-sizing: border-box;  /* needed for having same width for input and select */
+  width: 95px;
+}
+
+@media screen and (max-width: 330px) {
+  .table-row {
+    padding-top: 0.3rem;
+  }  
+}
+
+@media screen and (min-width: 200px), print {
+  .field {
+    display: inline-block; 
   }
 }
 
-.field-label .label {
-  font-size: inherit;
-}
-
-@media screen and (max-width: 360px) {
-  .field-label {
-    margin-bottom: 0.5rem;
+@media screen and (min-width: 331px), print {
+  .table-block  {
+    display: table;
   }
-}
-
-@media screen and (min-width: 361px), print {
+  .table-row {
+    display: table-row;
+  }
   .field-label {
-    -ms-flex-preferred-size: 0;
-        flex-basis: 0;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-    margin-right: 1.5rem;
+    display: table-cell;
+    padding-top: 0.3rem;
+    padding-right: 0.5rem;
     text-align: right;
   }
+  .field-body {
+    display: table-cell;
+  }
+
   .field-label.is-small {
     font-size: 0.75rem;
     padding-top: 0.375em;
@@ -64,33 +72,5 @@ table {
   .field-label.is-large {
     font-size: 1.5rem;
     padding-top: 0.375em;
-  }
-}
-
-@media screen and (min-width: 361px), print {
-  .field-body {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-preferred-size: 0;
-        flex-basis: 0;
-    -webkit-box-flex: 5;
-        -ms-flex-positive: 5;
-            flex-grow: 5;
-    -ms-flex-negative: 1;
-        flex-shrink: 1;
-  }
-  .field-body .field {
-    -ms-flex-negative: 1;
-        flex-shrink: 1;
-  }
-  .field-body .field:not(.is-narrow) {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
-  .field-body .field:not(:last-child) {
-    margin-bottom: 0;
-    margin-right: 0.75rem;
   }
 }
